--- a/TP2_Laboratorio_1/TP2_Laboratorio_1.cbp
+++ b/TP2_Laboratorio_1/TP2_Laboratorio_1.cbp
@@ -31,7 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="Funciones.h" />
+		<Unit filename="Funciones.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="Prototipos.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
